# uilib-spec

./: .gitignore  LICENSE  README.md  SPECIFICATION.md  pyproject.toml
examples/: AccordionPanel.html  Button.html
src/uilibspec_binding_generator/: __main__.py  core.py  transformer.py
src/uilibspec_binding_generator/transformers/: jinja.py
